27 july 2005 LR MY
- first version of multi-implicit_surface mesher compiles and runs

27 July 2005 LR MY
- changed some names
- multi_implicit_oracle added

30 June 2005 Laurent Rineau
- attempt to merged trunk, sliver_branch and my local modifications...
- may be correct, or not.

07 April 2005 Laurent Rineau
- added skin implicit function
- the option parser of examples/Mesh_3/implicite_surface_mesher_3.C now has
string options
- new options:
  --distribution_after_filename
  --mesh_after_filename
  --initial_surface_off
  --surface_off
  --slivers_off
- can output slivers to off
- multi-passes of sliver exudation

06 April 2005 Laurent Rineau
- added sliver exudation: include/CGAL/Mesh_3/Sliver_exuder.h
  (perhaps should it be only a global function >> TODO)
03 April 2005 Laurent Rineau
- New functions using isosurface of Inrimage images
- Regular triangulation
- New prototype of sliver exudation
- New command-line options parser
- examples/Mesh_3/implicit_surface_mesher.C is some kind of demo. It
can also make coffe.

24 March 2005 Laurent Rineau
- new requirements for Mesher_level
- the bug of Refine_tets.h has been crunched!
- less verbose debugging outputs

8 February 2005 Laurent Rineau
- new changes.txt file
- removed files that are in Mesh_2 and Mesh_3:
    - Mesher_level.h (Mesh_2)
    - Triangulation_mesher_level_traits_3 (Mesh_3)
- new template parameters for Mesher_level
- modified Complex_2_in_triangulation_3:
    - factorised set_in_complex and remove_from_complex
    - new functions is_in_complex
- rename Complex_2_in_triangulation_cell_base_* classes:
    - Complex_2_in_triangulation_cell_base_3
    - Complex_2_in_triangulation_surface_mesh_cell_base_3
- new Mesher_level function names:
    - Tr& triangulation_ref_impl()
    - Vertex_handle insert_impl(p, z)
    - Zone conflicts_zone_impl(p)
    - void scan_triangulation_impl()
    - bool no_longer_element_to_refine_impl()
    - Element get_next_element_impl()
    - void pop_next_element_impl()