@@ -62,6 +62,9 @@ Packages/Mesh_2/test/Mesh_2/test_filtred_container
 Packages/Mesh_3/examples/Mesh_3/depends
 Packages/Mesh_3/examples/Mesh_3/implicit_surfaces_mesher_3
 Packages/Mesh_3/examples/Mesh_3/my_makefile
+Packages/Mesh_3/test/Mesh_3/combined_spheres
+Packages/Mesh_3/test/Mesh_3/multi_spheres
+Packages/Mesh_3/test/Mesh_3/my_makefile
 Packages/Min_annulus_d/*.aux
 Packages/Min_annulus_d/*.bbl
 Packages/Min_annulus_d/*.blg
