@@ -1,3 +1,7 @@
+15 august 2005 Laurent Rineau
+- in Surface_mesher: new Combining_oracle, and Oracle_visitor
+- in Mesh_3 test/Mesh_3/combined_spheres tests that new oracle.
+
 27 july 2005 LR MY
 - first version of multi-implicit_surface mesher compiles and runs
 
